# meeting-transcriber

./: README.md  pyproject.toml  spec.md
src/meeting_transcriber/: __init__.py  __main__.py  audio.py  chunking.py  config.py  keyboard.py  main.py  minutes.py  templates.py  transcriber.py  tui.py
src/meeting_transcriber/backends/: __init__.py  api.py  base.py  claude_agent.py  claude_cli.py  factory.py
